k8s/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
spec:
  type: ClusterIP
  selector:
    app: portainer
  ports:
    - protocol: TCP
      name: https
      port: 9443
      targetPort: 9443
    - protocol: TCP
      name: http
      port: 9000
      targetPort: 9000
